<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">olexson-travel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="claim">Claims</string>
    <string name="new_claim">New Claim</string>
    <string name="category">Category</string>
    <string name="cost">Cost</string>
    <string name="item_description">Item Description</string>
    <string name="expense_item">Expense Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="new_item">New Item</string>
    <string name="email">Email</string>
    <string name="edit_claim">Edit Claim</string>
    <string name="claim_name">Claim Name</string>
    <string name="claim_description">Claim Description</string>
    <string name="done">Done</string>
    <string name="item_name">Item Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="currency">Currrency</string>
    <string name="title_activity_new_claim">NewClaimActivity</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="claim_status">Status</string>
    <string name="date_range">Date Range</string>
    <string name="to">to</string>
    <string name="title_activity_new_item">NewItemActivity</string>
    <string name="title_activity_expense_items">ExpenseItemsActivity</string>
    <string name="title_activity_edit_claim">EditClaim</string>
    <string name="title_activity_email">EmailActivity</string>

</resources>
