<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.olexson_travel.ItemListActivity" >

    <TextView
        android:id="@+id/claim_itemlisttextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Claim*"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/daterangetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/claim_itemlisttextView"
        android:layout_toStartOf="@+id/claim_itemlisttextView"
        android:text="Date Range*"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/claimstatustextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/daterangetextView"
        android:layout_alignBottom="@+id/daterangetextView"
        android:layout_toEndOf="@+id/claim_itemlisttextView"
        android:text="Status*"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/claim_editbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/edit_claim" />

    <Button
        android:id="@+id/emailbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/newitem_button"
        android:text="@string/email" />

    <TextView
        android:id="@+id/costcurrency_alltextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daterangetextView"
        android:layout_centerHorizontal="true"
        android:text="Cost Currency*"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/claimdescriptioninfotextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/costcurrency_alltextView"
        android:layout_centerHorizontal="true"
        android:text="Claim Description*"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/itemlistView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/claim_editbutton"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/claimdescriptioninfotextView" >

    </ListView>

    <Button
        android:id="@+id/newitem_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/new_item" />

</RelativeLayout>
